--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dist"
   ],
   "scripts": {
+    "dev": "parcel -p 8080 demo.html ",
     "start": "npm run build -- -w",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
     "clean": "del-cli dist",
@@ -33,19 +34,18 @@
   "author": "zman <hxfdarling@hotmail.com>",
   "dependencies": {
     "dprop": "^1.0.0",
-    "object-assign": "^4.1.1",
-    "schema-utils": "^0.4.3",
-    "word-wrapper": "^1.0.7"
+    "object-assign": "^4.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^5.2.5",
     "@commitlint/config-angular": "^5.1.1",
     "@webpack-contrib/eslint-config-webpack": "^2.0.2",
-    "@webpack-contrib/test-utils": "^0.1.2",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.0.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "conventional-github-releaser": "^2.0.0",
@@ -60,11 +60,10 @@
     "lint-staged": "^6.0.0",
     "memory-fs": "^0.4.1",
     "nsp": "^3.1.0",
+    "parcel-bundler": "^1.7.1",
     "pre-commit": "^1.2.2",
     "prettier": "^1.9.2",
-    "standard-version": "^4.2.0",
-    "webpack": "^4.0.0",
-    "webpack-defaults": "^2.0.0-rc.2"
+    "standard-version": "^4.2.0"
   },
   "engines": {
     "node": ">= 6.9.0 || >= 8.9.0"
